--- a/basian.html
+++ b/basian.html
@@ -9,7 +9,6 @@
 	<meta property="og:title" content="八仙樂園塵暴事件傷患查詢 by Fonger">
 	<meta property="og:description" content="利用開放資料做的簡易傷患查詢">
     <title>八仙樂園塵暴事件傷患查詢 by Fonger</title>
-    <link rel="stylesheet" href="">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <style>
@@ -99,6 +98,7 @@
         </div>
 
     </div>
+    <a href="https://github.com/Fonger/basian" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 </body>
 
 </html>
