--- a/basian.html
+++ b/basian.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta property="og:title" content="八仙樂園塵暴事件傷患查詢 by Fonger">
+	<meta property="og:title" content="八仙樂園塵爆事件傷患查詢">
 	<meta property="og:description" content="利用開放資料做的簡易傷患查詢">
-    <title>八仙樂園塵暴事件傷患查詢 by Fonger</title>
+    <title>八仙樂園塵爆事件傷患查詢 by Fonger</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <style>
@@ -68,7 +68,7 @@
 
 <body ng-controller="patientController">
     <div class="container">
-    	<h3>八仙塵暴傷患查詢 by <a href="https://www.facebook.com/mr.fonger">Fonger</a></h3>
+    	<h3>八仙塵爆傷患查詢 by <a href="https://www.facebook.com/mr.fonger">Fonger</a></h3>
         <div class="row">
             <input type="text" class="form-control" placeholder="搜尋姓名..." ng-model="search" /> 最後更新：{{ lastmodify }} - 第 {{ currentPage}} 頁 / 共 {{ totalPage }} 頁
         </div>
