--- a/basian.html
+++ b/basian.html
@@ -18,7 +18,46 @@
         .pagination>li>a, .pagination>li>span {
             padding: 6px 11px;
         }
+        [ng-cloak] {
+          display: none !important;
+        }
     </style>
+</head>
+
+<body ng-controller="patientController">
+    <div class="container">
+    	<h3>八仙塵爆傷患查詢 by <a href="https://www.facebook.com/mr.fonger">Fonger</a></h3>
+        <div class="row" ng-cloak>
+            <input type="text" class="form-control" placeholder="搜尋姓名..." ng-model="search" /> 最後更新：{{ lastmodify }} - 第 {{ currentPage}} 頁 / 共 {{ totalPage }} 頁
+        </div>
+        <div class="row">
+            <h3 class="splash" ng-hide="loaded">載入更新中...</h3>
+            <div class="table-responsive" id="tableList">
+                <table class="table table-striped" ng-cloak>
+                    <thead>
+                        <tr>
+                            <th ng-repeat="col in cols">{{col}}</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="patient in filteredPatients = (patients | filter:ignoreCenterName()) | startFrom:(currentPage-1)*pageSize | limitTo:pageSize">
+                            <td ng-repeat="col in cols">
+                                {{ patient[col] || '無資料'}}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <div class="row">
+        	<center>
+	        	<pagination ng-init="currentPage = 1" ng-show="filteredPatients.length > pageSize" total-items="filteredPatients.length" items-per-page="{{pageSize}}" max-size="{{maxSize}}" ng-model="currentPage" boundary-links="true" rotate="true" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+	    	</center>
+        </div>
+
+    </div>
+    <a href="https://github.com/Fonger/basian" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.0/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript">
@@ -44,6 +83,7 @@
                 $scope.patients = data.data;
                 $scope.cols = Object.keys(data.data[0]);
                 $scope.totalPage = Math.ceil(data.data.length / $scope.pageSize);
+                $scope.loaded = true;
             })
             .error(function(data) {
                 alert('發生錯誤!');
@@ -64,41 +104,6 @@
         };
     });
     </script>
-</head>
-
-<body ng-controller="patientController">
-    <div class="container">
-    	<h3>八仙塵爆傷患查詢 by <a href="https://www.facebook.com/mr.fonger">Fonger</a></h3>
-        <div class="row">
-            <input type="text" class="form-control" placeholder="搜尋姓名..." ng-model="search" /> 最後更新：{{ lastmodify }} - 第 {{ currentPage}} 頁 / 共 {{ totalPage }} 頁
-        </div>
-        <div class="row">
-            <div class="table-responsive" id="tableList">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th ng-repeat="col in cols">{{col}}</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="patient in filteredPatients = (patients | filter:ignoreCenterName()) | startFrom:(currentPage-1)*pageSize | limitTo:pageSize">
-                            <td ng-repeat="col in cols">
-                                {{ patient[col] || '無資料'}}
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class="row">
-        	<center>
-	        	<pagination ng-init="currentPage = 1" ng-show="filteredPatients.length > pageSize" total-items="filteredPatients.length" items-per-page="{{pageSize}}" max-size="{{maxSize}}" ng-model="currentPage" boundary-links="true" rotate="true" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
-	    	</center>
-        </div>
-
-    </div>
-    <a href="https://github.com/Fonger/basian" class="hidden-xs"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 </body>
 
 </html>
